--- a/fraim.css
+++ b/fraim.css
@@ -1,9 +1,9 @@
 nav{
-    background-color: #803c42;
+    background-color: rgba(222, 222, 60, 1);
 }
 
 footer{
-    background-color: #803c42;
+    background-color: rgba(222, 222, 60, 1);
     
 }
 .footer-copyright{
